--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DENGFUCHINESE</title>
+    <title>Trung Tâm Tiếng Trung DengFu</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="2.png">
+    <link rel="icon" type="image/x-icon" href="2.png" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,16 +27,23 @@
     <!-- Facebook SDK - Optimized loading -->
     <div id="fb-root"></div>
     <script>
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml: true,
+          version: 'v18.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s);
         js.id = id;
-        js.src =
-          "https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v18.0";
+        js.src = 'https://connect.facebook.net/vi_VN/sdk.js';
+        js.async = true;
+        js.defer = true;
         fjs.parentNode.insertBefore(js, fjs);
-      })(document, "script", "facebook-jssdk");
+      }(document, 'script', 'facebook-jssdk'));
     </script>
   </body>
 </html>
