--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Trung Tâm Tiếng Trung DengFu</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="2.png" />
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/21fz1Jwm/2.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
